--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minesweeper</title>
-  <script src="env.js"></script>
-  <script src="main.js"></script>
+  <script src="javascript/env.js"></script>
+  <script src="javascript/main.js"></script>
 </head>
 
 <body>
